lots more tests working